--- a/Style/style-auf-einen-blick.css
+++ b/Style/style-auf-einen-blick.css
@@ -21,12 +21,6 @@ h1{
     margin-top: 5rem;
 }
 
-img{
-    width: 100%;
-    height: auto;
-    padding-bottom: 10rem;
-}
-
 .main-text{
     margin: 0;
 }
@@ -39,8 +33,8 @@ img{
     grid-template-columns: 1fr 1fr;
     text-align: center;
     gap: 2rem;
-    margin-bottom: 10rem;
-    margin-top: 10rem;
+    margin-bottom: 9rem;
+    margin-top: 6rem;
 }
 
 .col-span-2{
@@ -59,21 +53,89 @@ img{
     padding: 1rem;
 }
 
+img{
+    width: 100%;
+    height: auto;
+}
+
+.img-container{
+    position: relative;
+    margin-bottom: 9rem;
+}
+
+.disclaimer{
+    position: absolute;
+    font-size: 1.5rem;
+    opacity: 0.2;
+    text-align: right;
+    line-height: 1.5rem;
+    width: 55%;
+    bottom: 1rem;
+    right: 1rem;
+}
+
+.disclaimer a{
+    color: var(--color-text);
+}
+
+
 @media only screen and (max-width: 700px) {
     html{
         font-size: 40% !important;
     }
 
-    .inhalt{
-        width: 99%;
+    .table{
+        width: 100%;
+        margin-bottom: 4rem;
+        margin-top: 7rem;
     }
 
     img{
-        width:  150%!important;
+        width:  225%!important;
         padding-bottom: 0;
+    }
+
+    .inhalt{
+        margin-bottom: 6rem;
     }
 
     .img-container{
         overflow: scroll;
+        overflow-y: hidden;
+        margin-bottom: 2rem;
     }
+
+    .disclaimer{
+        display: none;
+    }
+
+    .home-button-container{
+        width: 12px;
+        height: 8px;
+        top: 15px;
+        left: 10px;
+    }
+    
+    .home-button,
+    .home-button-hover{
+        grid-row: 1/1;
+        grid-column: 1/1;
+        width: 10px;
+    }
+    
+    .home-button{
+        -webkit-mask-position: -10pxm 0px;
+        mask-position: -10px 0px;
+    }
+    
+    .home-button:hover{
+        opacity: 1;
+        -webkit-mask-position: 10px 0px;
+        mask-position: 10px 0px;
+    }
+    
+    .home-button:hover + .home-button-hover{
+        opacity: 0.7;
+    }
+
 }
