--- a/Style/style-timeline.css
+++ b/Style/style-timeline.css
@@ -12,7 +12,7 @@ body{
 
 .waves-container{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     overflow: hidden;
 }
@@ -35,7 +35,7 @@ body{
 .inhalt{
     width: 37%;
     position: absolute;
-    left: 9%;
+    left: 8%;
     top: 0;
     padding: 0 5.5rem 5rem;
     background-color: rgba(255, 255, 255, 0.55);
@@ -48,6 +48,8 @@ body{
 .images{
     position: fixed;
     width: 100%;
+    top: 50%;
+    margin-top: -26%;
 }
 
 .full-screen{
@@ -61,6 +63,18 @@ body{
 @media only screen and (max-width: 700px) {
     .inhalt{
         width: 80%;
+        left: 0; 
+        right: 0; 
+        margin-left: auto; 
+        margin-right: auto; 
     }
 }
 
+@media all and (display-mode: fullscreen) {
+    .images{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        margin-top: 0;
+    }
+}
