--- a/Style/style-timeline.css
+++ b/Style/style-timeline.css
@@ -61,6 +61,10 @@ body{
 }
 
 @media only screen and (max-width: 700px) {
+    html{
+        font-size: 40% !important;
+    }
+
     .inhalt{
         width: 80%;
         left: 0; 
@@ -68,9 +72,13 @@ body{
         margin-left: auto; 
         margin-right: auto; 
     }
+
+    .full-screen{
+        display: none;
+    }
 }
 
-@media all and (display-mode: fullscreen) and (min-width: 700px) {
+@media all and (display-mode: fullscreen) {
     .images{
         position: fixed;
         width: 100%;
